--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ html5lib
 six
 decorator==4.0.9
 PyYAML==3.11
+docutils
 
 python-memcached==1.58
 
@@ -13,4 +14,6 @@ django-treebeard>=4.0
 easy_thumbnails
 
 django-mptt<0.9
+django-classy-tags>=0.3.4.1
+django-sekizai>=0.7
 
